# auto-ctfd

./: .gitignore  README.md  ctfd.yml  inventory.yml.sample  minio.yml  monitoring.yml  nginx.yml  pyproject.toml
auto_ctfd/: database.yml  docker.yml  exporter.yml
auto_ctfd/group_vars/: all.yml  all.yml.sample
auto_ctfd/roles/certbot/defaults/: main.yml
auto_ctfd/roles/certbot/tasks/: install.yml
auto_ctfd/roles/ctfd/files/: docker-compose.yml
auto_ctfd/roles/ctfd/tasks/: main.yml
auto_ctfd/roles/ctfd/templates/: .env.j2
auto_ctfd/roles/database/defaults/: main.yml
auto_ctfd/roles/database/files/: docker-compose.yml
auto_ctfd/roles/database/tasks/: main.yml
auto_ctfd/roles/database/templates/: .env.j2
auto_ctfd/roles/docker/tasks/: main.yml
auto_ctfd/roles/exporter/defaults/: main.yml
auto_ctfd/roles/exporter/files/: docker-compose.yml
auto_ctfd/roles/exporter/tasks/: main.yml
roles/backup/defaults/: main.yml
roles/certbot/tasks/: install.yml
roles/ctfd/defaults/: main.yml
roles/ctfd/files/: docker-compose.yml
roles/ctfd/tasks/: main.yml
roles/ctfd/templates/: .env.j2
roles/database/defaults/: main.yml
roles/database/files/: docker-compose.yml
roles/database/templates/: .env.j2
roles/docker/tasks/: main.yml
roles/minio/defaults/: main.yml
roles/minio/files/: createbucket.sh  docker-compose.yml
roles/minio/tasks/: certs.yml  main.yml
roles/minio/templates/: .env.j2
roles/monitoring/defaults/: main.yml
roles/monitoring/tasks/: main.yml
roles/nginx/tasks/: main.yml
roles/nginx/templates/: default.j2
(+20 files in other folders)
